--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,6 @@ h1, h2 {
 h1 { font-size: 24px; }
 h2 { font-size: 28px; }
 
-.form-container.active { display: block; }
-
-.form-group { margin: 10px 0; }
-
 input {
     font-family: 'Pixel', 'Courier New', Courier, monospace;
     background: #fff;
@@ -104,3 +100,71 @@ button:hover {
     color: #fff;
     background: #222;
 }
+
+
+/* Teclado */
+.teclado {
+    display: grid;
+    grid-template-columns: repeat(14, 1fr);
+    gap: 5px;
+    padding: 10px;
+    background-color: #f0f0f0;
+    border-radius: 5px;
+    margin: 20px auto;
+}
+
+.tecla {
+    padding: 10px 15px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #e0e0e0;
+    cursor: pointer;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+
+.tecla:hover {
+    background-color: #d0d0d0;
+}
+
+.tecla:active {
+    background-color: #c0c0c0;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+    transform: translateY(1px);
+}
+
+/* Estilos del Modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content {
+    background: #fff;
+    border: 5px solid #000;
+    border-radius: 10px;
+    padding: 20px;
+    width: 300px;
+    margin: 15% auto;
+    text-align: center;
+  }
+  
+  #close-modal {
+    background: #000;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  
+  #close-modal:hover {
+    color: red;
+  }
