-Corrección de funciones en JS duplicados -Corrección de prevent default -Cambios estéticos -Funcionamiento del login listo -Se implementan sesiones.

--- a/css/record.css
+++ b/css/record.css
@@ -1,7 +1,8 @@
 @font-face {
     font-family: 'Pixel';
-    src: url('../emulogic-font/Emulogic-zrEw.ttf');
+    src: url('../softizen/Softizen.ttf');
 }
+
 
 body {
     background-color: #111;
