--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Pixel';
-    src: url('../emulogic-font/Emulogic-zrEw.ttf');
+    src: url('../softizen/Softizen.ttf');
 }
 
 body {
@@ -24,7 +24,7 @@ body {
     50% { background-position: 100% 50%; }
 }
 
-.container {
+.contenedor {
     display: inline-block;
     text-align: center;
     border: 5px solid #000;
@@ -97,8 +97,8 @@ button:hover {
 }
 
 .links a:hover {
-    color: #fff;
-    background: #222;
+    color: #888888;
+    background: #888888;
 }
 
 
@@ -108,7 +108,7 @@ button:hover {
     grid-template-columns: repeat(14, 1fr);
     gap: 5px;
     padding: 10px;
-    background-color: #f0f0f0;
+    background-color: #888888;
     border-radius: 5px;
     margin: 20px auto;
 }
@@ -118,18 +118,19 @@ button:hover {
     font-size: 16px;
     border: none;
     border-radius: 5px;
-    background-color: #e0e0e0;
+    border-color: #000000;
+    background-color: #888888;
     cursor: pointer;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     transition: background-color 0.3s ease;
 }
 
 .tecla:hover {
-    background-color: #d0d0d0;
+    background-color: #000000;
 }
 
 .tecla:active {
-    background-color: #c0c0c0;
+    background-color: #000000;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     transform: translateY(1px);
 }
